fixtures/semantic/invalid/recovery/missing-name.php
<?php
namespace ;

function recovery_missing_name(): void {}
